Fix footer overlap with a flexbox sticky footer

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -10,7 +10,9 @@ html {
 body {
   margin: 0;
   padding: 0;
-  padding-bottom: 9em;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   color: $text-color;
   font-family: $global-font-family;
   line-height: 1.5;
